<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="root">

    <Preference
            android:summary="@string/api_key_summary"
            android:title="@string/api_key"
            android:key="api_key"/>

    <Preference
            android:summary="@string/phone_number_summary"
            android:title="@string/phone_number"
            android:key="phone"/>

    <Preference
            android:title="@string/alarm_sound"
            android:summary="@string/def"
            android:key="alarm"/>

    <Preference
            android:title="@string/alarm_test"
            android:summary="@string/alarm_test_sum"
            android:key="alarm_test"/>

    <Preference
            android:title="@string/notify_sound"
            android:summary="@string/def"
            android:key="notify"/>

    <Preference
            android:title="@string/sms_mode"
            android:summary="@string/sms_mode_summary"
            android:key="sms_mode"/>

    <Preference
            android:title="@string/password"
            android:summary="@string/password_summary"
            android:key="password"/>

    <SwitchPreference
            android:title="@string/autostart"
            android:summary="@string/autostart_summary"
            android:key="autostart"/>

    <SwitchPreference
            android:title="@string/rele1"
            android:summary="@string/rele1_summary"
            android:key="rele1"/>

    <Preference
            android:title="@string/about"
            android:summary="@string/version"
            android:key="about"/>

</PreferenceScreen>
